--- a/app/views/lesli/partials/_application-data.html.erb
+++ b/app/views/lesli/partials/_application-data.html.erb
@@ -38,7 +38,8 @@ Building a better future, one line of code at a time.
 
 # add company information (account)
 @lesli[:company] = {
-    name: current_user.account.company_name,
+    #name: current_user.account.company_name,
+    name: current_user.account.name,
 }
 
 # set user information
