--- a/app/views/lesli/partials/_application-lesli-engines.html.erb
+++ b/app/views/lesli/partials/_application-lesli-engines.html.erb
@@ -20,11 +20,11 @@ along with this program. If not, see http://www.gnu.org/licenses/.
 
 Lesli · Ruby on Rails SaaS Development Framework.
 
-Made with ♥ by https://www.lesli.tech
+Made with ♥ by LesliTech
 Building a better future, one line of code at a time.
 
 @contact  hello@lesli.tech
-@website  https://www.lesli.dev
+@website  https://www.lesli.tech
 @license  GPLv3 http://www.gnu.org/licenses/gpl-3.0.en.html
 
 // · ~·~     ~·~     ~·~     ~·~     ~·~     ~·~     ~·~     ~·~     ~·~
@@ -62,6 +62,9 @@ Building a better future, one line of code at a time.
     <%= navigation_engine_things %>
     <%= navigation_engine_realty %>
 
+    <%# Analytics %>
+    <%= navigation_engine_audit %>
+
     <%# IT & Help desk %>
     <%= navigation_engine_kb %>
     <%= navigation_engine_portal %>
@@ -69,8 +72,8 @@ Building a better future, one line of code at a time.
     <%= navigation_engine_support %>
 
     <%# Security & privacy %>
-    <%= navigation_engine_audit %>
-    <%= navigation_engine_guard %>
+    <%= navigation_engine_shield %>
+    <%= navigation_engine_security %>
 
     <%# Integrations %>
     <%= navigation_engine_babel %>
