--- a/app/views/lesli/wrappers/_application-devise.html.erb
+++ b/app/views/lesli/wrappers/_application-devise.html.erb
@@ -38,7 +38,7 @@ Building a better future, one line of code at a time.
 
 <main id="lesli-application" class="standard-auth-view <%= custom_app_page_clas %>">
     <section class="columns is-gapless">
-        <div class="column">
+        <div class="column login-form">
             <div class="hero is-fullheight">
                 <% if back_to_login %>
                     <div class="hero-head pt-6 pl-6">
@@ -53,7 +53,6 @@ Building a better future, one line of code at a time.
                     </div>
                 <% end %>
                 <div class="hero-body is-flex-direction-column is-justify-content-center">
-
 
                     <%# Logo container %>
                     <div class="logo has-text-centered mb-4">
@@ -75,6 +74,6 @@ Building a better future, one line of code at a time.
                 <%#= render partial: "devise/shared/footer" %>
             </div>
         </div>
-        <div class="column is-hidden-touch"></div>
+        <div class="column background is-hidden-touch"></div>
     </section>
 </main>
