fix: engine initializer

--- a/app/views/lesli/layouts/application-devise.html.erb
+++ b/app/views/lesli/layouts/application-devise.html.erb
@@ -18,9 +18,9 @@ GNU General Public License for more details.
 You should have received a copy of the GNU General Public License
 along with this program. If not, see http://www.gnu.org/licenses/.
 
-Lesli · Ruby on Rails SaaS development platform.
+Lesli · Ruby on Rails SaaS Development Framework.
 
-Made with ♥ by https://www.lesli.tech
+Made with ♥ by LesliTech
 Building a better future, one line of code at a time.
 
 @contact  hello@lesli.tech
@@ -32,13 +32,15 @@ Building a better future, one line of code at a time.
 =end
 %>
 
+<% devise_controller = controller_path.split('/')[1] %>
+
 <!DOCTYPE html>
 <html>
 <head>
     <script>const Lesli = <%= @lesli.to_json.html_safe %></script>
     <%= render partial: "lesli/partials/application-head" %>
     <%# render partial: "lesli/partials/application-data" %>
-    <%= stylesheet_link_tag("lesli_shield/sessions", media: "all") %>
+    <%= stylesheet_link_tag("lesli_shield/#{devise_controller}", media: "all") %>
     <%# Disable back button in browser after Logout using JavaScript %>
     <% if flash[:logout] == true %>
         <script>
@@ -51,7 +53,7 @@ Building a better future, one line of code at a time.
 </head>
 <body class="<%= application_body_class() %>">
     <%= yield %>
-    <%= javascript_include_tag("lesli_shield/sessions") %>
+    <%= javascript_include_tag("lesli_shield/#{devise_controller}") %>
     <%= render partial: "lesli/partials/application-analytics" %>
 </body>
 </html>
