feat: improve modules integration

--- a/app/views/lesli/wrappers/_application-devise.html.erb
+++ b/app/views/lesli/wrappers/_application-devise.html.erb
@@ -34,9 +34,8 @@ Building a better future, one line of code at a time.
 
 <% title = defined?(title) ? title : "" %>
 <% back_to_login = defined?(back_to_login) ? back_to_login : false %>
-<% custom_app_page_clas = "#{ lesli_instance_code }-session".downcase %>
 
-<main id="lesli-application" class="standard-auth-view <%= custom_app_page_clas %>">
+<main id="lesli-application" class="standard-auth-view">
     <section class="columns is-gapless">
         <div class="column login-form">
             <div class="hero is-fullheight">
@@ -55,10 +54,10 @@ Building a better future, one line of code at a time.
                 <div class="hero-body is-flex-direction-column is-justify-content-center">
 
                     <%# Logo container %>
-                    <div class="logo has-text-centered mb-4">
+                    <div class="logo has-text-centered mb-6">
                         <%= image_tag(
                            "#{lesli_instance_code}/brand/app-auth.svg",    # dynamic path to the instance main logo
-                            :class => "#{lesli_instance_code}-logo",        # dynamic class according to the instance
+                            :class => "#{lesli_instance_code}-logo mb-2",  # dynamic class according to the instance
                             :alt => "Main logo") 
                         %>
                         <h1 class="has-text-primary">
