feat: enable discussion index

--- a/app/views/lesli/partials/_application-lesli-engines.html.erb
+++ b/app/views/lesli/partials/_application-lesli-engines.html.erb
@@ -35,50 +35,24 @@ Building a better future, one line of code at a time.
 <%# Standard module selector %>
 <lesli-application-engines>
 
-    <%# Core %>
+    <%# 01. Administration %>
     <%= navigation_engine_admin %>
 
-    <%# Administration %>
-    <%= navigation_engine_team %>
-
-    <%# Sales & marketing %>
-    <%= navigation_engine_house %>
-    <%= navigation_engine_mailer %>
-    <%= navigation_engine_proposal %>
-
-    <%# Productivity & teamwork %>
+    <%# 03. Productivity & Teamwork%>
     <%= navigation_engine_calendar %>
-    <%= navigation_engine_letter %>
-    <%= navigation_engine_focus %>
-    <%= navigation_engine_social %>
     <%= navigation_engine_bell %>
-    <%= navigation_engine_time %>
-    <%= navigation_engine_talk %>
-    <%= navigation_engine_storage %>
 
-    <%# Finance %>
-    <%= navigation_engine_things %>
-    <%= navigation_engine_realty %>
-
-    <%# Analytics %>
+    <%# 05. Analytics %>
     <%= navigation_engine_audit %>
 
-    <%# IT & Help desk %>
-    <%= navigation_engine_kb %>
-    <%= navigation_engine_portal %>
-    <%= navigation_engine_shared %>
+    <%# 07. IT & Help Desk %>
     <%= navigation_engine_support %>
 
-    <%# Security & privacy %>
+    <%# 08. Security & Privacy %>
     <%= navigation_engine_shield %>
     <%= navigation_engine_security %>
 
-    <%# Integrations %>
+    <%# 09. Integrations %>
     <%= navigation_engine_babel %>
-    <%= navigation_engine_federation %>
-    <%= navigation_engine_development %>
-
-    <%# Intelligence %>
-    <%= navigation_engine_scraper %>
 
 </lesli-application-engines>
