--- a/lib/scss/templates/application.scss
+++ b/lib/scss/templates/application.scss
@@ -84,7 +84,7 @@ Building a better future, one line of code at a time.
 
 
 // · Lesli cloud objects
-// @import "lesli/cloud-objects/discussion";
+@import "Lesli/scss/cloud-objects/discussion";
 // @import "lesli/cloud-objects/file";
 
 
@@ -95,7 +95,7 @@ Building a better future, one line of code at a time.
 
 // · Lesli vue components
 // @import "lesli/elements/autocomplete";
-// @import "lesli/elements/avatar";
+// @import "Lesli/scss/elements/avatar";
 // @import "lesli/elements/empty";
 // @import "lesli/elements/file-uploader";
 // @import "lesli/elements/gallery";
