feat: support external security engines

--- a/app/views/lesli/partials/_application-lesli-panels.html.erb
+++ b/app/views/lesli/partials/_application-lesli-panels.html.erb
@@ -40,9 +40,9 @@ Building a better future, one line of code at a time.
 
 
 <%# Loading standar bell panels %>
-<% if defined?(CloudBell) %>
-    <application-component-panel-notifications></application-component-panel-notifications>
-    <application-component-panel-announcements></application-component-panel-announcements>
+<% if defined?(LesliBell) %>
+    <application-panel-bell-notifications></application-panel-bell-notifications>
+    <%# <application-panel-announcements></application-component-panel-announcements> %>
 <% end %>
 
 
