--- a/lib/scss/templates/application.scss
+++ b/lib/scss/templates/application.scss
@@ -71,7 +71,7 @@ Building a better future, one line of code at a time.
 // @import "lesli/panels/panel-tasks";
 @import "Lesli/scss/panels/panel-support-ticket";
 // @import "lesli/panels/panel-profile";
-// @import "lesli/panels/panel-notification";
+@import "Lesli/scss/panels/panel-notification";
 // @import "lesli/panels/panel-announcements";
 
 
