--- a/lib/scss/layouts/application-component.scss
+++ b/lib/scss/layouts/application-component.scss
@@ -35,5 +35,5 @@ Building a better future, one line of code at a time.
 .lesli-application-component {
     border-radius: .6rem;
     box-shadow: $lesli-box-shadow;
-    background-color: lesli-css-color(solid, white);
+    background-color: white;
 }
