--- a/lib/scss/layouts/application-header.scss
+++ b/lib/scss/layouts/application-header.scss
@@ -46,7 +46,7 @@ header.lesli-application-header {
         }
 
         .navbar-item {
-            display: flex;
+            padding: 0;
 
             [class^="ri-"] {
                 font-size: 25px;
