--- a/lib/scss/layouts/application-search.scss
+++ b/lib/scss/layouts/application-search.scss
@@ -44,7 +44,7 @@ Building a better future, one line of code at a time.
     padding: 0 28px;
     max-width: calc(100% - var(--lesli-sidebar-width));
     margin-left: var(--lesli-sidebar-width);
-    background-color: lesli-css-color(solid, white);
+    background-color: white;
 
     .content {
         padding: 0;
