--- a/app/views/lesli/partials/_application-lesli-header.html.erb
+++ b/app/views/lesli/partials/_application-lesli-header.html.erb
@@ -61,23 +61,31 @@ Building a better future, one line of code at a time.
         
         <%# language selector %>
         <% if I18n.available_locales.length > 1 %>
-            <div class="dropdown is-hoverable header-language-selector">
-                <div class="dropdown-trigger">
-                    <span class="icon has-text-link">
-                        <%= lesli_svg("locale-#{locale}") %>
-                    </span>
-                </div>
-                <div class="dropdown-menu" id="dropdown-menu-locale" role="menu">
-                    <div class="dropdown-content">
-                        <% I18n.available_locales.each do |locale| %>
-                            <% next if locale == I18n.locale %>
-                            <%= link_to language_url(locale), { :class => "dropdown-item" } do %>
-                                <span class="icon has-text-grey-light">
-                                    <%= lesli_svg("locale-#{locale}") %>
-                                </span>
-                                <span><%= language_name(locale) %></span>
+            <div class="navbar-item">
+                <div class="dropdown is-hoverable">
+                    <div class="dropdown-trigger">
+                        <button 
+                            class="button is-ghost" 
+                            aria-haspopup="true" 
+                            aria-controls="dropdown-menu"
+                            @click="storeLayout.showProfile = true">
+                            <span class="icon is-size-5">
+                                <%= lesli_svg("locale-#{locale}") %>
+                            </span>
+                        </button>
+                    </div>
+                    <div class="dropdown-menu" id="dropdown-menu-locale" role="menu">
+                        <div class="dropdown-content">
+                            <% I18n.available_locales.each do |locale| %>
+                                <% next if locale == I18n.locale %>
+                                <%= link_to language_url(locale), { :class => "dropdown-item" } do %>
+                                    <span class="icon has-text-grey-light">
+                                        <%= lesli_svg("locale-#{locale}") %>
+                                    </span>
+                                    <span><%= language_name(locale) %></span>
+                                <% end %>
                             <% end %>
-                        <% end %>
+                        </div>
                     </div>
                 </div>
             </div>
