--- a/lib/scss/templates/application.scss
+++ b/lib/scss/templates/application.scss
@@ -60,6 +60,7 @@ Building a better future, one line of code at a time.
 @import "Lesli/scss/layouts/application-announcements";
 @import "Lesli/scss/layouts/application-component";
 @import "Lesli/scss/layouts/application-container";
+@import "Lesli/scss/layouts/application-content";
 @import "Lesli/scss/layouts/application-engines";
 @import "Lesli/scss/layouts/application-sidebar";
 @import "Lesli/scss/layouts/application-header";
